<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkBackground"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/circle_rounded_filled"
            android:layout_marginBottom="@dimen/m16"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexabold"
            android:gravity="center"
            android:text="@string/alert"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@color/whiteAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="@color/whiteAccent"
            android:fontFamily="@font/nexatext_trial_regular"
            android:text="@string/clear_current_changes"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            app:backgroundTint="@color/green"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:fontFamily="@font/nexabold"
            android:letterSpacing="0"
            android:textColor="@color/darkBackground"
            app:shapeAppearance="@style/ShapeAppearance.Capsule" />

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>